--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MultiReturn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadOnlyExample.cs" />
     <Compile Include="RefAndOutExample.cs" />
   </ItemGroup>
   <ItemGroup>
