--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyExample.cs" />
+    <Compile Include="ReadOnlyVsStaticReadOnly.cs" />
     <Compile Include="RefAndOutExample.cs" />
   </ItemGroup>
   <ItemGroup>
