--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -44,12 +44,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DaysOfWeekENUM.cs" />
+    <Compile Include="JaggedArrayExample.cs" />
+    <Compile Include="MultiExceptionFilter.cs" />
     <Compile Include="MultiReturn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyExample.cs" />
     <Compile Include="ReadOnlyVsStaticReadOnly.cs" />
     <Compile Include="RefAndOutExample.cs" />
+    <Compile Include="StringBuilderVsString.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
