--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="CalculatorDelegate.cs" />
     <Compile Include="DaysOfWeekENUM.cs" />
+    <Compile Include="MyGenericClass.cs" />
     <Compile Include="HashtableExample.cs" />
     <Compile Include="JaggedArrayExample.cs" />
     <Compile Include="MultiExceptionFilter.cs" />
