--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -44,7 +44,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalculatorDelegate.cs" />
+    <Compile Include="CalculatorGeneric.cs" />
     <Compile Include="DaysOfWeekENUM.cs" />
+    <Compile Include="ICalculable.cs" />
     <Compile Include="MyGenericClass.cs" />
     <Compile Include="HashtableExample.cs" />
     <Compile Include="JaggedArrayExample.cs" />
