--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -56,17 +56,20 @@
     <Compile Include="JaggedArrayExample.cs" />
     <Compile Include="MultiExceptionFilter.cs" />
     <Compile Include="MultiReturn.cs" />
+    <Compile Include="PrinterSpoolerSingleton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadOnlyExample.cs" />
     <Compile Include="ReadOnlyVsStaticReadOnly.cs" />
     <Compile Include="RefAndOutExample.cs" />
+    <Compile Include="SealedVsSingleton.cs" />
     <Compile Include="Singleton.cs" />
     <Compile Include="SingletonEager.cs" />
     <Compile Include="SingletonLazy.cs" />
     <Compile Include="SingletonNoThreadSafe.cs" />
     <Compile Include="SingletonThreadSafe.cs" />
     <Compile Include="SortedListAndDictionary.cs" />
+    <Compile Include="StaticConverter.cs" />
     <Compile Include="StringBuilderVsString.cs" />
     <Compile Include="StringExtensions.cs" />
   </ItemGroup>
