--- a/CSharpConcepts.csproj
+++ b/CSharpConcepts.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ExpressionUsingStack.cs" />
     <Compile Include="ICalculable.cs" />
     <Compile Include="MulticastDelegate.cs" />
+    <Compile Include="MultithreadDownload.cs" />
     <Compile Include="MyEventArgs.cs" />
     <Compile Include="MyGenericClass.cs" />
     <Compile Include="HashtableExample.cs" />
@@ -75,6 +76,9 @@
     <Compile Include="StaticConverter.cs" />
     <Compile Include="StringBuilderVsString.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Threading.cs" />
+    <Compile Include="ThreadSyncWithLock.cs" />
+    <Compile Include="ThreadSyncWithoutLock.cs" />
     <Compile Include="ThrowVsThrowExException.cs" />
   </ItemGroup>
   <ItemGroup>
